...
      appBar: AppBar(
        title: const Text(
          'DevOps Assignment- TODO list',
        ),
      ),
      floatingActionButton: FloatingActionButton(
        key: const ValueKey('button.add'),
        onPressed: () {
          Navigator.push(
            context,
            CupertinoPageRoute(
              builder: (_) => const DetailPage(
                type: DetailPageType.add,
...
